[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Characters/Kirito/Kirito.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Textures-Sprites/Tilesets/Story Tiles/StoryTiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Hud-MenuElements/Transition.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/Super Smash Bros Ultimate/Menu Sounds/crit.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Characters/US_Soldier/US_Soldier.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Stages/Level One.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 167.837, 1014.03 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 179.576, 128.846 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4473.82, 520.238 )

[sub_resource type="Animation" id=4]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ColorRect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Level2"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("ColorRect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "level2"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Level3"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("ColorRect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "level3"
} ]
}

[node name="Level One" type="Node2D"]
script = ExtResource( 12 )

[node name="Kirito" parent="." instance=ExtResource( 1 )]
position = Vector2( 382, 504 )

[node name="Camera2D" type="Camera2D" parent="Kirito"]
current = true
zoom = Vector2( 2, 2 )
limit_left = 0
limit_right = 7360
limit_bottom = 1216
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="US Soldier" parent="." instance=ExtResource( 10 )]
position = Vector2( 2221.66, -775.233 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="US Soldier"]
position = Vector2( 537.285, -161.421 )
scale = Vector2( 60.017, 2.715 )
process_parent = true
physics_process_parent = true

[node name="Tiles" parent="." instance=ExtResource( 2 )]

[node name="TopLevel" type="Area2D" parent="."]
position = Vector2( 7314, -2104 )
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLevel"]
shape = SubResource( 1 )

[node name="BottomLevel" type="Area2D" parent="."]
collision_layer = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLevel"]
position = Vector2( 7306, -766 )
shape = SubResource( 2 )

[node name="BottomDeath" type="Area2D" parent="."]
position = Vector2( 2788.37, 1043.1 )
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomDeath"]
position = Vector2( 1027.04, 980.553 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = -1886.01
margin_top = -3526.73
margin_right = 9274.99
margin_bottom = 2501.27
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 4 )
anims/Level2 = SubResource( 5 )
anims/Level3 = SubResource( 6 )
[connection signal="area_entered" from="TopLevel" to="." method="_on_TopLevel_area_entered"]
[connection signal="area_entered" from="BottomLevel" to="." method="_on_BottomLevel_area_entered"]
[connection signal="area_entered" from="BottomDeath" to="." method="_on_BottomDeath_area_entered"]
